# py-excalidraw

./: .env.excalidraw  .env.excalidraw.local  .env.excalidraw.production  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
scripts/: build_and_up.sh  teardown.sh
server/: app.py  config.py  pyproject.toml  requirements.txt  storage.py
server/inject/: save-to-admin.js
server/routes/: admin.py  documents.py  firebase.py  ui.py
