[project]
name = "go-excalidraw-python"
version = "0.1.0"
description = "FastAPI backend for Excalidraw (all-in-one)"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.114",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 8888
reload = true

